Fixed z-index issue

--- a/src/scss/color-picker-input.scss
+++ b/src/scss/color-picker-input.scss
@@ -1,3 +1,7 @@
+.colorpicker.is-opened {
+  z-index: 1050;
+}
+
 .color-picker-input .color-picker {
   margin: 4px;
   width: 220px;
